--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@astronautlabs/jsonpath": "^1.0.6",
+    "@octokit/fixtures": "^21.0.7",
     "@octokit/plugin-retry": "^3.0.3",
     "@octokit/rest": "^18.0.0",
     "@types/jsonpath": "^0.2.0",
@@ -106,6 +107,7 @@
     "fast-glob": "^3.2.4",
     "lodash.groupby": "^4.6.0",
     "minimatch": "^3.0.4",
+    "nock": "^13.0.2",
     "p-queue": "^6.5.0"
   },
   "devDependencies": {
