--- a/package.json
+++ b/package.json
@@ -95,22 +95,21 @@
   },
   "author": "Gago <xeroice@gmail.com>",
   "dependencies": {
-    "@actions/core": "^1.2.4",
-    "@astronautlabs/jsonpath": "^1.0.6",
-    "@octokit/fixtures": "^21.0.7",
-    "@octokit/plugin-retry": "^3.0.3",
-    "@octokit/rest": "^18.0.0",
-    "@types/jsonpath": "^0.2.0",
-    "@types/lodash.groupby": "^4.6.6",
-    "aws-sdk": "^2.681.0",
-    "envalid": "^6.0.2",
-    "fast-glob": "^3.2.4",
-    "lodash.groupby": "^4.6.0",
-    "minimatch": "^3.0.4",
-    "nock": "^13.0.2",
-    "p-queue": "^6.5.0"
+    "@actions/core": "1.2.4",
+    "@astronautlabs/jsonpath": "1.0.6",
+    "@octokit/fixtures": "21.0.7",
+    "@octokit/plugin-retry": "3.0.3",
+    "@octokit/rest": "18.0.0",
+    "aws-sdk": "2.681.0",
+    "envalid": "6.0.2",
+    "fast-glob": "3.2.4",
+    "lodash.groupby": "4.6.0",
+    "minimatch": "3.0.4",
+    "p-queue": "6.5.0"
   },
   "devDependencies": {
+    "nock": "13.0.2",
+    "@types/lodash.groupby": "4.6.6",
     "@types/jest": "25.2.3",
     "@types/node": "13.13.8",
     "@typescript-eslint/eslint-plugin": "2.34.0",
