--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: upload event.json
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: event
           path: $GITHUB_EVENT_PATH
