--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -14,5 +14,6 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           rulesLocation: herald_rules/*.json
+
       - name: Store response payload to file
-        run: echo '\${{ fromJSON(steps.herald.outputs.appliedRules) }}'
+        run: echo '${{ fromJSON(steps.herald.outputs.appliedRules) }}'
