adding 120 to prettier

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "prettier": {
     "singleQuote": true,
-    "semi": true
+    "semi": true,
+    "printWidth": 120
   },
   "eslintConfig": {
     "ignorePatterns": "dist/*",
