--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   herald:
-    name: Apply herald rules
+    name: apply herald rules
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
