--- a/.github/workflows/validate_template.yml
+++ b/.github/workflows/validate_template.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   herald:
-    name: apply herald rules
+    name: Validate Template
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
