--- a/.github/workflows/validate_template.yml
+++ b/.github/workflows/validate_template.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: event
-          path: $GITHUB_EVENT_PATH
+          path: ${{ env.GITHUB_EVENT_PATH }}
       - uses: actions/checkout@master
       - name: validate issue is present
         id: herald
