--- a/.github/workflows/validate_template.yml
+++ b/.github/workflows/validate_template.yml
@@ -9,9 +9,15 @@ jobs:
     name: Validate Template
     runs-on: ubuntu-latest
     steps:
+      - name: event location
+        run: |
+          echo $GITHUB_EVENT_PATH
+      - uses: actions/upload-artifact@master
+        with:
+          name: event
+          path: /home/runner/work/_temp/_github_workflow/event.json
       - uses: actions/checkout@master
-      - name: validate issue is present
-        id: herald
+      - name: Validate issue is present
         uses: ./
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
