--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "debug": "^4.1.1",
     "envalid": "6.0.2",
     "fast-glob": "3.2.4",
+    "jsonpath": "^1.0.2",
     "lodash.groupby": "4.6.0",
     "minimatch": "3.0.4",
     "p-queue": "6.6.0"
