--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.9",
+    "@types/jsonpath": "^0.2.0",
     "@types/lodash.groupby": "4.6.6",
     "@types/node": "13.13.15",
     "@typescript-eslint/eslint-plugin": "3.9.0",
