--- a/.github/workflows/validate_template.yml
+++ b/.github/workflows/validate_template.yml
@@ -1,23 +1,22 @@
-name: Validate Template has an issue in a description
+name: Validate Template
 
 on:
   pull_request:
-    types: [edited, opened]
+    types: [edited, opened, synchronize, reopened]
 
 jobs:
   heraldFoo:
-    name: Validate Template
     runs-on: ubuntu-latest
     steps:
       - name: event location
         run: |
           echo $GITHUB_EVENT_PATH
-      # - uses: actions/upload-artifact@master
-      #   with:
-      #     name: event
-      #     path: /home/runner/work/_temp/_github_workflow/event.json
+      - uses: actions/upload-artifact@master
+        with:
+          name: event
+          path: /home/runner/work/_temp/_github_workflow/event.json
       - uses: actions/checkout@master
-      - name: Validate issue is present
+      - name: Validate issue number is present
         uses: ./
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
