--- a/.github/workflows/validate_template.yml
+++ b/.github/workflows/validate_template.yml
@@ -5,7 +5,7 @@ on:
     types: [edited, opened, synchronize, reopened]
 
 jobs:
-  heraldFoo:
+  validateTemplate:
     runs-on: ubuntu-latest
     steps:
       - name: event location
