--- a/.github/workflows/validate_template.yml
+++ b/.github/workflows/validate_template.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: event
-          path: ${{ env.GITHUB_EVENT_PATH }}
+          path: ${{ github.event_path }}
       - uses: actions/checkout@master
       - name: Validate issue number is present
         uses: ./
