--- a/package.json
+++ b/package.json
@@ -97,18 +97,19 @@
   "author": "Gago <xeroice@gmail.com>",
   "dependencies": {
     "@actions/core": "1.2.4",
-    "@astronautlabs/jsonpath": "1.0.6",
     "@octokit/rest": "18.0.3",
-    "@types/debug": "^4.1.5",
-    "debug": "^4.1.1",
+    "debug": "4.1.1",
     "envalid": "6.0.2",
     "fast-glob": "3.2.4",
+    "jsonpath": "1.0.2",
     "lodash.groupby": "4.6.0",
     "minimatch": "3.0.4",
     "p-queue": "6.6.0"
   },
   "devDependencies": {
+    "@types/debug": "4.1.5",
     "@types/jest": "26.0.9",
+    "@types/jsonpath": "0.2.0",
     "@types/lodash.groupby": "4.6.6",
     "@types/node": "13.13.15",
     "@typescript-eslint/eslint-plugin": "3.9.0",
