adding a check so we fail if we find issues when building on the workflow vs what's committed

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -49,4 +49,7 @@ jobs:
         run: |
           npm install
       - name: Build
-        run: npm run build
+        run: npm run Build
+      - name: Check if build is different from the committed changes
+        run: |
+          git diff-index --quiet HEAD -- || exit 1
