--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -48,8 +48,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-      - name: Build
-        run: npm run Build
-      - name: Check if build is different from the committed changes
-        run: |
-          git diff-index --quiet HEAD -- || exit 1
+      - name: build
+        run: npm run build
+      - name: check if build is different from the committed changes
+        run: git diff-index --quiet HEAD -- || exit 1
