--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -50,5 +50,10 @@ jobs:
           npm install
       - name: build
         run: npm run build
+      - name: event location
+      - uses: actions/upload-artifact@master
+        with:
+          name: binary
+          path: dist/index.js
       - name: check if build is different from the committed changes
         run: git diff --exit-code --name-status dist/index.js
