I should have waited for workflows to run :gun: (#89)
* I should have waited for workflows to run :gun:

* adding a check so we fail if we find issues when building on the workflow vs what's committed

* missing commit

* only checking on dist/index.js

* we changed how the system worked

* let's see

* saving the binary

* what the heck

* reverting due to ncc full path in binary

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -48,5 +48,5 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-      - name: Build
+      - name: build
         run: npm run build
