--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "@typescript-eslint/parser": "3.9.1",
     "@zeit/ncc": "0.22.3",
     "ajv-keywords": "3.5.2",
-    "auto-changelog": "^2.2.0",
+    "auto-changelog": "2.2.0",
     "bufferutil": "4.0.1",
     "canvas": "2.6.1",
     "eslint": "7.7.0",
