--- a/package.json
+++ b/package.json
@@ -103,8 +103,9 @@
     "envalid": "6.0.2",
     "fast-glob": "3.2.4",
     "jsonpath": "1.0.2",
+    "lodash.groupby": "4.6.0",
+    "lodash.isequal": "4.5.0",
     "minimatch": "3.0.4",
-    "lodash.isequal": "^4.5.0",
     "p-queue": "6.6.1"
   },
   "devDependencies": {
@@ -112,7 +113,7 @@
     "@types/jest": "26.0.10",
     "@types/jsonpath": "0.2.0",
     "@types/lodash.groupby": "4.6.6",
-    "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.isequal": "4.5.5",
     "@types/node": "13.13.15",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
