--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">12.0.0"
   },
   "keywords": [
+    "herald",
     "herald rules",
     "github",
     "action"
@@ -116,10 +117,8 @@
     "@typescript-eslint/eslint-plugin": "4.1.1",
     "@typescript-eslint/parser": "4.1.1",
     "@zeit/ncc": "0.22.3",
-    "ajv-keywords": "3.5.2",
     "auto-changelog": "2.2.0",
     "bufferutil": "4.0.1",
-    "canvas": "2.6.1",
     "eslint": "7.9.0",
     "eslint-config-prettier": "6.11.0",
     "husky": "4.3.0",
@@ -136,7 +135,6 @@
     "ts-node": "9.0.0",
     "tslib": "2.0.1",
     "typescript": "4.0.2",
-    "utf-8-validate": "5.0.2",
-    "ws": "7.3.1"
+    "utf-8-validate": "5.0.2"
   }
 }
