building before using the action to make sure the build does not betray us

--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: Install packages
+        run: npm install
+      - name: Build binary
+        run: npm run build
       - name: apply herald rules
         id: herald
         uses: ./
