--- a/package.json
+++ b/package.json
@@ -119,7 +119,6 @@
     "ajv-keywords": "3.5.2",
     "auto-changelog": "2.2.0",
     "bufferutil": "4.0.1",
-    "canvas": "2.6.1",
     "eslint": "7.9.0",
     "eslint-config-prettier": "6.11.0",
     "husky": "4.3.0",
@@ -136,7 +135,6 @@
     "ts-node": "9.0.0",
     "tslib": "2.0.1",
     "typescript": "4.0.2",
-    "utf-8-validate": "5.0.2",
-    "ws": "7.3.1"
+    "utf-8-validate": "5.0.2"
   }
 }
