adding code coverage to code climate

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -36,6 +36,10 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
+      - name: Publish code coverage to Code Climate
+        uses: paambaati/codeclimate-action@v2.7.4
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_REPORTER_ID }}
   build:
     name: Run build
     runs-on: ubuntu-latest
