use pull_request_target

--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -1,7 +1,7 @@
 name: use herald
 
 on:
-  pull_request:
+  pull_request_target:
     types: [edited, opened, synchronize, reopened]
 
 jobs:
@@ -9,6 +9,12 @@ jobs:
     name: apply herald rules
     runs-on: ubuntu-latest
     steps:
+      - id: auth
+        uses: jnwng/github-app-installation-token-action@v1
+        with:
+          appId: ${{ secrets.UHA_APP_ID }}
+          installationId: ${{ secrets.UHA_INSTALLATION_ID }}
+          privateKey: ${{ secrets.UHA_APP_PRIVATE_KEY }}
       - uses: actions/checkout@master
       - name: Install packages
         run: npm install
@@ -18,7 +24,7 @@ jobs:
         id: herald
         uses: ./
         with:
-          GITHUB_TOKEN: ${{ secrets.REPO_STATUS }}
+          GITHUB_TOKEN: ${{ steps.auth.outputs.token }}
           rulesLocation: herald_rules/*.json
           DEBUG: '*'
 
