--- a/.github/workflows/use_herald.yml
+++ b/.github/workflows/use_herald.yml
@@ -1,11 +1,11 @@
-name: use herald
+name: Use Herald
 
 on:
   pull_request_target:
     types: [edited, opened, synchronize, reopened]
 
 jobs:
-  herald:
+  applyRules:
     name: apply herald rules
     runs-on: ubuntu-latest
     steps:
@@ -19,14 +19,9 @@ jobs:
       - name: Install packages
         run: npm install
       - name: Build binary
-        run: npm run build
-      - name: apply herald rules
-        id: herald
-        uses: ./
+      - id: herald
+        uses: gagoar/use-herald-action@master
         with:
           GITHUB_TOKEN: ${{ steps.auth.outputs.token }}
           rulesLocation: herald_rules/*.json
           DEBUG: '*'
-
-      - name: Store response payload to file
-        run: echo '${{ fromJSON(steps.herald.outputs.appliedRules) }}'
