Set dryRun to true for herald action

--- a/.github/workflows/use_herald.yml
+++ b/.github/workflows/use_herald.yml
@@ -25,3 +25,4 @@ jobs:
           GITHUB_TOKEN: ${{ steps.auth.outputs.token }}
           rulesLocation: herald_rules/*.json
           DEBUG: '*'
+          dryRun: 'true'
