Add param debug

--- a/.github/workflows/use_herald.yml
+++ b/.github/workflows/use_herald.yml
@@ -25,4 +25,4 @@ jobs:
           GITHUB_TOKEN: ${{ steps.auth.outputs.token }}
           rulesLocation: herald_rules/*.json
           DEBUG: '*'
-          dryRun: 'true'
+          dryRun: true
