--- a/.github/workflows/use_action_for_build_test.yml
+++ b/.github/workflows/use_action_for_build_test.yml
@@ -21,3 +21,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           rulesLocation: herald_rules_for_build/*.json
           DEBUG: '*'
+          dryRun: 'true'
