Edit existing comments instead of reposting (#187)
<!--- write down the issue related to this  PR-->

**Issue Reference**: closes #34 

## Description

<!--- Describe your changes in detail -->

This PR adds functionality that edits existing comments posted by Herald instead of re-posting every time a user pushes a commit that triggers a new rule.

We use an HTML comment `<!--- USE_HERALD_ACTION /path/to/rule.json -->` to tag each comment, and rely on the fact that paths to rules are unique to determine which comments to replace.

## How Has This Been Tested?

<!--- Please describe in detail how you tested your changes. -->
<!--- Include details of your testing environment, tests ran to see how -->
<!--- your change affects other areas of the code, etc. -->

Breaking snapshots have been updated. One test has been updated to check for editing behaviour.

## Checklist:

<!--- Go over all the following points, and put an `x` in all the boxes that apply. -->
<!--- If you're unsure about any of these, don't hesitate to ask. We're here to help! -->

- [x] My code follows the code style of this project.
- [ ] My change requires a change to the documentation.
- [ ] I have updated the documentation accordingly.

--- a/.github/workflows/use_action_for_build_test.yml
+++ b/.github/workflows/use_action_for_build_test.yml
@@ -21,4 +21,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           rulesLocation: herald_rules_for_build/*.json
           DEBUG: '*'
-          dryRun: 'true'
+          dryRun: true
