--- a/.github/workflows/use_action_for_build_test.yml
+++ b/.github/workflows/use_action_for_build_test.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm run build
       - name: apply herald rules
         id: herald
-        uses: ./
+        uses: ./dist/
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           rulesLocation: herald_rules_for_build/*.json
