this should definetly work

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
       - run: echo '::set-output name=status::$(git status --porcelain)'
         id: gitStatus
-      - run: echo ${{ steps.gitStatus.outputs.status }}
+      - run: echo ${{ steps.gitStatus.outputs.status  == 'no'}}
       - name: Commit dist/ files
         if: steps.gitStatus.outputs.status != ''
         run: |
@@ -33,7 +33,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git commit -m "rebuild dist/" -a
       - name: Push changes
-        if: steps.gitStatus.outputs.status != ''
+        if: steps.gitStatus.outputs.status == 'no'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ steps.auth.outputs.token }}
