--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -25,7 +25,9 @@ jobs:
         run: npm run build
       - run: echo '::set-output name=status::$(git diff --quiet && echo false || echo true)'
         id: gitStatus
-      - run: echo ${{ steps.gitStatus.outputs.status == 'true' }}
+      - run: |
+          echo ${{ steps.gitStatus.outputs.status == 'true' }}
+          git diff --quiet
       - name: Commit dist/ files
         if: steps.gitStatus.outputs.status == 'true'
         run: |
