--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -23,7 +23,9 @@ jobs:
         run: npm install
       - name: build dist/
         run: npm run build
-      - run: echo '::set-output name=status::$(git diff --quiet && echo clean || echo modified)'
+      - run: |
+          STATUS=$(git diff --quiet && echo clean || echo modified)
+          echo "::set-output name=status::$STATUS"
         id: gitStatus
       - run: |
           echo ${{ steps.gitStatus.outputs.status }}
