--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "ncc build index.ts",
+    "build": "esbuild --bundle index.ts --platform=node --target=node12 --main-fields=main,module,browser --outdir=dist/",
     "lint": "eslint index.ts",
     "version": "auto-changelog -p --issue-url https://github.com/gagoar/use-herald-action/issue/{id} --merge-url https://github.com/gagoar/use-herald-action/pull/{id} --compare-url https://github.com/gagoar/use-herald-action/compare/{from}...{to} && git add CHANGELOG.md"
   },
@@ -121,17 +121,16 @@
     "@types/node": "13.13.30",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
-    "@zeit/ncc": "0.22.3",
     "ajv-keywords": "3.5.2",
     "auto-changelog": "2.2.1",
     "bufferutil": "4.0.2",
+    "esbuild": "0.8.3",
     "eslint": "7.12.1",
     "eslint-config-prettier": "6.15.0",
     "husky": "4.3.0",
     "jest": "26.6.3",
     "jest-mock-process": "1.4.0",
     "lint-staged": "10.5.1",
-    "ncc": "0.3.6",
     "nock": "13.0.4",
     "prettier": "2.1.2",
     "prettier-eslint": "11.0.0",
