--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   "dependencies": {
     "@actions/core": "1.2.6",
     "@octokit/rest": "18.1.0",
+    "@actions/github": "4.0.0",
     "debug": "4.3.1",
     "envalid": "6.0.2",
     "fast-glob": "3.2.5",
